###################
Nagios Change Log
###################

1.0b5 - ??/??/2002
------------------
* Fixed another memory leak related to processing of passive checks
* Init script mods (killproc doesn't colllide with RedHat's killproc)
* Added minimalistic sample object config file (minimal.cfg)


1.0b4 - 07/04/2002
------------------
* Address field in host definitions is now optional in template-based
  config format.  Defaults to host name if not specified.
* Changed method of checking for user/group in RPM spec file
* Bug fixes in template-based object code
* Fixed memory leak when processing passive checks
* Added illegal_macro_output_chars variable to main config file to
  allow for stripping dangerous shell characters from plugin ouput
* Comment IDs are no longer re-numbered when Nagios (re)starts.  This
  applies only to the default comment data method (DB method never
  renumbered comments)


1.0b3 - 06/09/2002
------------------
* Bug fixes in template-based object code
* Bug fix in tac CGI for counting host and service states properly
* Default is now to check for external commands as often as possible
* Ping syntax for WAP interface moved to CGI config file
* Command file user/group defaults to Nagios user/group unless
  overridden with configure script options
* Sample template-based object config file fixes


1.0b2 - 05/27/2002
------------------
* Updated RPM spec file
* Context-sensitive help option moved to CGI config file
* Fixed bug with escaping strings for DB support (MySQL & PostgreSQL)
* Configure script now reports warning if unable to located
  MySQL or PostgreSQL libs
* Several bug fixes in template-based object code
* Multiple hostgroups supported in host and service escalations
* Wildcard support in service, service escalation, and host
  escalation definitions


1.0b1 - 05/10/2002
------------------

* More verbose listing of object information in configuration CGI
* Added histogram CGI for graphing host/service events