@@ -3,7 +3,7 @@
  * AVAIL.C -  Nagios Availability CGI
  *
  * Copyright (c) 2000-2002 Ethan Galstad (nagios@nagios.org)
- * Last Modified: 05-22-2002
+ * Last Modified: 07-28-2002
  *
  * License:
  * 
@@ -1412,6 +1412,9 @@ int process_cgivars(void){
 		        }
 
 	        }
+
+	/* free memory allocated to the CGI variables */
+	free_cgivars(variables);
 
 	return error;
         }
