@@ -3,7 +3,7 @@
  * TRENDS.C -  Nagios State Trends CGI
  *
  * Copyright (c) 1999-2002 Ethan Galstad (nagios@nagios.org)
- * Last Modified: 05-19-2002
+ * Last Modified: 07-28-2002
  *
  * License:
  * 
@@ -1551,6 +1551,9 @@ int process_cgivars(void){
 			small_image=TRUE;
 
 	        }
+
+	/* free memory allocated to the CGI variables */
+	free_cgivars(variables);
 
 	return error;
         }
